--- a/aluraCar/src/app/app.html
+++ b/aluraCar/src/app/app.html
@@ -1,13 +1,1 @@
-<!-- <ion-nav [root]="rootPage"></ion-nav> -->
-<ion-header>
-    <ion-navbar>
-        <ion-title>
-            aulaCar
-        </ion-title>
-    </ion-navbar>
-</ion-header>
-
-<ion-content padding>
-    The World is your olyster
-    <p>Texto blablabla não sei o que</p>
-</ion-content>
+<ion-nav [root]="rootPage"></ion-nav>
