--- a/aluraCar/src/app/app.html
+++ b/aluraCar/src/app/app.html
@@ -1,1 +1,19 @@
-<ion-nav [root]="rootPage"></ion-nav>
+<ion-menu [content]="content">
+    <ion-header>
+        <ion-toolbar>
+            <button ion-button menuToggle>
+                <ion-icon name="menu"></ion-icon>
+            </button>
+            <ion-title>Menu</ion-title>
+        </ion-toolbar>
+    </ion-header>
+
+    <ion-content padding>
+        <!-- <ion-list inset ->- (tira linhas do menu) > -->
+        <ion-list>
+            <button menuClose ion-item *ngFor="let pagina of paginas" (click)=abrePagina(pagina)>{{ pagina.titulo }}</button>
+        </ion-list>
+    </ion-content>
+</ion-menu >
+ 
+<ion-nav [root]="rootPage" swipeBackEnabled="false" #content></ion-nav>
